<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BoFiLo</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset (Dev)</string>
    <string name="story_list_progress">%1$d/%2$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="console_finish_message">Finished loading %s</string>
    <string name="download_default_max">∞</string>
    <string name="permission_rationale">The storage access is used to directly access your epubs, this will speed up the
        operation extremely
    </string>
    <string name="permission_denied">We will use indirect access to your epubs, this will slow down the operation
        extremely
    </string>
    <string name="list_action_title">Action:</string>
    <array name="list_actions">
        <item>Restart</item>
        <item>Un-new</item>
        <item>Force download</item>
        <item>Delete</item>
    </array>
    <string name="download_started_success">Scheduled download of "%s"</string>

    <!-- Services -->
    <!-- Service Download -->
    <string name="channel_name">Download progress</string>
    <string name="channel_description">Shows the progress of running epub downloads.</string>
    <string name="foreground_name">Download: %s</string>
    <string name="foreground_text">%1$d/%2$s</string>

    <!-- Service UnNew -->
    <string name="unnew_channel_name">UnNew progress</string>
    <string name="unnew_channel_description">Shows the progress of the UnNew command.</string>
    <string name="unnew_foreground_name">%1$s: %2$s</string>


    <!-- Preference Titles -->
    <string name="preference_general">General</string>
    <string name="preference_debug_title">Developer options</string>

    <!-- General Preferences -->
    <string name="preference_general_is_adult_title">Support adult content</string>
    <string name="preference_general_is_adult_summary">Wether to allow download of adult content or not.</string>
    <string name="preference_general_include_images_title">Include images</string>
    <string-array name="preference_general_include_images_entries">
        <item>No images</item>
        <item>Cover only</item>
        <item>All images</item>
    </string-array>
    <string-array name="preference_general_include_images_values">
        <item>false</item>
        <item>coveronly</item>
        <item>true</item>
    </string-array>
    <string name="preference_general_choose_directory_title">Default directory</string>
    <string name="preference_general_choose_directory_summary_default">Choose a directory where downloaded epubs will be
        saved to.
    </string>
    <string name="preference_general_choose_directory_summary">Downloaded epubs will be saved to %s.</string>
    <string name="preference_general_choose_src_directory_title">Default source directory</string>
    <string name="preference_general_choose_src_directory_summary_default">Defaults to the same as "Default directory"
    </string>
    <string name="preference_general_choose_src_directory_summary">Searching for update able epubs in %s.</string>
    <string name="preference_general_choose_src_directory_enabled_title">Use different source directory</string>
    <string name="preference_general_choose_src_directory_enabled_summary">it is especially useful if you save your
        data in a cloud storage and have access to the files via filesystem
    </string>

    <!-- Developer Preferences -->
    <string name="preference_debug_caching_title">Caching between restarts</string>
    <string name="preference_debug_caching_summary_on" tools:ignore="TypographyDashes">Setting "--save-cache" is
        enabled.
    </string>
    <string name="preference_debug_caching_summary_off">Caching between restarts is disabled</string>
    <string name="preference_debug_personalini_title">Supply FanFicFare personal.ini</string>
    <string name="preference_debug_personalini_summary">Caution: This may break the app.\nIt must be a functioning
        personal.ini file.
    </string>
    <string name="preference_debug_console_show_title">Show script output</string>
    <string name="preference_debug_console_show_summary">Show the console output of FanFicFare</string>
    <string name="preference_debug_cachesaf_title">Cache file lookup</string>
    <string name="preference_debug_cachesaf_summary">Caches child files of your configured directory. Enable if you are
        using SAF or searching for files takes for ever.
    </string>
    <string name="story_write_foreground_name">\"Saving file \'%s\'\"</string>
    <string name="story_write_channel_name">Saving file</string>
    <string name="story_write_channel_description">Save a file to your configured directory.</string>


    <string name="webview_user_agent_default">none</string>
    <string name="acra_mail_subject">ACRA crashreport from BoFiLo</string>
    <string name="acra_dialog_title">BoFiLo crashed</string>
    <string name="acra_dialog_text">Unfortunately BoFiLo crashed. would you like to submit a bug report via e-mail?</string>
    <string name="acra_dialog_button_positive">Submit</string>
    <string name="acra_dialog_button_negative">Cancel</string>

    <string name="captcha_waiting_for_webview">Loading…</string>
    <string name="reload">Reload</string>
</resources>
