<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preference_general">
        <Preference
                android:key="pref_default_directory"
                android:title="@string/preference_general_choose_directory_title"
                android:summary="@string/preference_general_choose_directory_summary_default"/>
        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:title="@string/preference_general_choose_src_directory_enabled_title"
                android:summary="@string/preference_general_choose_src_directory_enabled_summary"
                android:key="pref_default_src_directory_enabled"/>
        <Preference
                android:key="pref_default_src_directory"
                android:title="@string/preference_general_choose_src_directory_title"
                android:dependency="pref_default_src_directory_enabled"
                android:summary="@string/preference_general_choose_src_directory_summary_default"/>
        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_is_adult"
                android:title="@string/preference_general_is_adult_title"
                android:summary="@string/preference_general_is_adult_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/preference_debug_title">

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_save_cache"
                android:title="@string/preference_debug_caching_title"
                android:summaryOn="@string/preference_debug_caching_summary_on"
                android:summaryOff="@string/preference_debug_caching_summary_off"/>

        <SwitchPreference
                android:title="@string/preference_debug_cachesaf_title" android:key="pref_cache_saf"
                android:defaultValue="false" android:summary="@string/preference_debug_cachesaf_summary"/>
        <SwitchPreferenceCompat
                android:title="@string/preference_debug_console_show_title" android:key="pref_show_console"
                android:summary="@string/preference_debug_console_show_summary" android:defaultValue="true"/>
        <Preference
                android:key="pref_dev_personalini"
                android:title="@string/preference_debug_personalini_title"
                android:summary="@string/preference_debug_personalini_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
